--- a/CarRentalManagementSystem/Views/Home/About.cshtml
+++ b/CarRentalManagementSystem/Views/Home/About.cshtml
@@ -86,13 +86,7 @@
             </div>
             <div class="col-lg-6 mb-4">
                 <div class="image-container">
-                    <img src="~/images/about-company.jpg" alt="Our Company" class="modern-image">
-                    <div class="image-overlay">
-                        <div class="overlay-content">
-                            <i data-lucide="play-circle" class="play-icon"></i>
-                            <span>Watch Our Journey</span>
-                        </div>
-                    </div>
+                    <img src="~/images/about-us.jpg" alt="Our Company" class="modern-image">
                 </div>
             </div>
         </div>
@@ -241,14 +235,7 @@
             <div class="col-md-4 mb-4">
                 <div class="team-card">
                     <div class="team-image-wrapper">
-                        <img src="~/images/team/ceo.jpg" alt="CEO" class="team-image">
-                        <div class="team-overlay">
-                            <div class="team-social">
-                                <a href="#" class="social-link"><i data-lucide="linkedin"></i></a>
-                                <a href="#" class="social-link"><i data-lucide="twitter"></i></a>
-                                <a href="#" class="social-link"><i data-lucide="mail"></i></a>
-                            </div>
-                        </div>
+                        <img src="~/images/team/team1.jpg" alt="CEO" class="team-image">
                     </div>
                     <div class="team-info">
                         <h5 class="team-name">John Smith</h5>
@@ -266,14 +253,7 @@
             <div class="col-md-4 mb-4">
                 <div class="team-card">
                     <div class="team-image-wrapper">
-                        <img src="~/images/team/manager.jpg" alt="Manager" class="team-image">
-                        <div class="team-overlay">
-                            <div class="team-social">
-                                <a href="#" class="social-link"><i data-lucide="linkedin"></i></a>
-                                <a href="#" class="social-link"><i data-lucide="twitter"></i></a>
-                                <a href="#" class="social-link"><i data-lucide="mail"></i></a>
-                            </div>
-                        </div>
+                        <img src="~/images/team/team2.jpg" alt="Manager" class="team-image">
                     </div>
                     <div class="team-info">
                         <h5 class="team-name">Sarah Johnson</h5>
@@ -291,14 +271,7 @@
             <div class="col-md-4 mb-4">
                 <div class="team-card">
                     <div class="team-image-wrapper">
-                        <img src="~/images/team/support.jpg" alt="Support" class="team-image">
-                        <div class="team-overlay">
-                            <div class="team-social">
-                                <a href="#" class="social-link"><i data-lucide="linkedin"></i></a>
-                                <a href="#" class="social-link"><i data-lucide="twitter"></i></a>
-                                <a href="#" class="social-link"><i data-lucide="mail"></i></a>
-                            </div>
-                        </div>
+                        <img src="~/images/team/team3.jpg" alt="Support" class="team-image">
                     </div>
                     <div class="team-info">
                         <h5 class="team-name">Mike Davis</h5>
@@ -350,7 +323,7 @@
                     </div>
                     <div class="testimonial-footer">
                         <div class="customer-info">
-                            <img src="~/images/customers/customer1.jpg" alt="Customer" class="customer-avatar">
+                            <img src="~/images/profiles/profile1.jpg" alt="Customer" class="customer-avatar">
                             <div class="customer-details">
                                 <h6 class="customer-name">Emma Wilson</h6>
                                 <span class="customer-type">Regular Customer</span>
@@ -381,7 +354,7 @@
                     </div>
                     <div class="testimonial-footer">
                         <div class="customer-info">
-                            <img src="~/images/customers/customer2.jpg" alt="Customer" class="customer-avatar">
+                            <img src="~/images/profiles/profile2.jpg" alt="Customer" class="customer-avatar">
                             <div class="customer-details">
                                 <h6 class="customer-name">David Brown</h6>
                                 <span class="customer-type">Business Traveler</span>
@@ -412,7 +385,7 @@
                     </div>
                     <div class="testimonial-footer">
                         <div class="customer-info">
-                            <img src="~/images/customers/customer3.jpg" alt="Customer" class="customer-avatar">
+                            <img src="~/images/profiles/profile3.jpg" alt="Customer" class="customer-avatar">
                             <div class="customer-details">
                                 <h6 class="customer-name">Lisa Garcia</h6>
                                 <span class="customer-type">Family Vacation</span>
@@ -444,11 +417,6 @@
                     <div class="video-wrapper">
                         <div class="ratio ratio-16x9">
                             <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Company Video" allowfullscreen></iframe>
-                        </div>
-                        <div class="video-overlay">
-                            <div class="play-button">
-                                <i data-lucide="play" class="play-icon"></i>
-                            </div>
                         </div>
                     </div>
                     <div class="video-stats">
